syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.edu.ufabc.mfmachado.humblemq.proto";
option go_package = "github.com/mattmfx/humble-mq-go-client";

service SendMessage {
  rpc SendMessage(SendMessageRequest) returns (SendMessageResponse) {}
}

message SendMessageRequest {
  string channel = 1;
  repeated Message message = 2;
}

message SendMessageResponse {}

message Message {
  string content = 1;
}